# qr-gift

./: .gitignore  LICENSE  README.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_tables.py  0002_add_system_configs.py  0003_gift_and_access_logs.py  0004_multi_binding_and_level.py  0005_red_packet_content_and_taxonomy.py  0006_add_plain_token_for_gifts.py  0007_add_storage_channel_id_for_gifts.py
backend/app/: main.py
backend/app/api/: auth.py  binding.py  dashboard.py  gift.py  logs.py  qrcode.py  red_packet.py  redirect.py  security.py  system_config.py
backend/app/core/: config.py  crypto.py  database.py  dependencies.py  response.py  security.py
backend/app/models/: __init__.py  base.py  binding.py  gift.py  log.py  qrcode.py  red_packet.py  system_config.py  user.py
backend/app/repositories/: binding_repository.py  gift_repository.py  qrcode_repository.py  red_packet_repository.py  security_repository.py  system_config_repository.py  user_repository.py
backend/app/schemas/: auth.py  binding.py  gift.py  logs.py  qrcode.py  red_packet.py  security.py  system_config.py
backend/app/services/: binding_service.py  gift_service.py  qrcode_service.py  red_packet_service.py  security_service.py  system_config_service.py
backend/app/storage/: aliyun_oss_storage.py  base.py  factory.py  local_storage.py  minio_storage.py
backend/scripts/: db_upgrade.py  reset_admin.py
deploy/: docker-compose.yml  nginx.conf
frontend/: Dockerfile  index.html  package-lock.json  (+2 more)
(+29 files in other folders)
